# guilander

./: .gitignore  README.md  conanfile.txt  generate_cxx_header_from_wayland_xml.py  meson.build
examples/: fontconfig.cpp  interactive_mono_text.cpp  interactive_window.cpp  list_fontconfig_fonts.cpp  meson.build  minimal_window.cpp  mono_text.cpp  multiple_windows.cpp
examples/wlr/: meson.build  static_picture_overlay.cpp  static_picture_overlay.hpp  text_overlay.cpp
examples/wlr/wlr_protocols/: wlr_data_control_unstable_v1_protocol.hpp  wlr_export_dmabuf_unstable_v1_protocol.hpp  wlr_foreign_toplevel_management_unstable_v1_protocol.hpp  wlr_gamma_control_unstable_v1_protocol.hpp  wlr_input_inhibit_unstable_v1_protocol.hpp  wlr_layer_shell_unstable_v1_protocol.hpp  wlr_output_management_unstable_v1_protocol.hpp  wlr_output_power_management_unstable_v1_protocol.hpp  wlr_screencopy_unstable_v1_protocol.hpp  wlr_virtual_pointer_unstable_v1_protocol.hpp
include/guilander/: canvas.hpp  font.hpp  interactive_window.hpp  mdspan.hpp  mono_sort_set.hpp  static_picture.hpp  static_picture_window.hpp  units.hpp
src/: font.cpp  interactive_window.cpp  meson.build  mono_sort_set.cpp  static_picture.cpp  static_picture_window.cpp
subprojects/: waylander.wrap
tests/: meson.build  test_canvas_anchor.cpp  test_canvas_concepts.cpp  test_canvas_stamp.cpp  test_font.cpp  test_mono_sort_set.cpp  test_sstd_mdspan.cpp
